<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:title="@string/music_setting">
<PreferenceCategory 
	android:title="@string/setting_download"
	android:order="2"
	>
	
	<SwitchPreference
		android:title="@string/setting_downlrc_title"
		android:defaultValue="true"
		android:summary="@string/setting_downlrc_summary"			
		android:key="@string/setting_downlrc_key"
		android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
		>
	</SwitchPreference >
	
	<SwitchPreference
		android:title="@string/setting_downimg_title" 
		android:defaultValue="true" 
		android:summary="@string/setting_downimg_summary"			
		android:key="@string/setting_downimg_key"
		android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
		>
	</SwitchPreference>
	
	<SwitchPreference  
        android:title="@string/setting_downInfo_title" 
        android:defaultValue="true" 
        android:summary="@string/setting_downInfo_summary"           
        android:key="@string/setting_downInfo_key"
        android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
        >
    </SwitchPreference>
    <SwitchPreference  
        android:title="@string/flow_hint" 
        android:defaultValue="true" 
        android:summary="@string/setting_flowhint_summary"           
        android:key="@string/setting_flowhint_key"
        android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
        >
    </SwitchPreference>
	
	
	
<!--	<ListPreference 
		android:title="@string/setting_lewaid_title" 
		android:key="@string/setting_lewaid_key"
		android:clickable="false">
	</ListPreference>
-->
</PreferenceCategory>
<PreferenceCategory 
    android:title="@string/file_filter"
    android:order="1"
    >
     <SwitchPreference  
        android:title="@string/filter_songs" 
        android:defaultValue="false" 
        android:summary="@string/filter_songs_hint"           
        android:key="@string/setting_filtersongs_key"
        android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
        >
    </SwitchPreference>
    <Preference
       android:key="music_select_folder"        
       android:title="@string/folder"
       android:summary="@string/choose_folder"  
       />
    
</PreferenceCategory>
<PreferenceCategory
    android:title="@string/setting_basic">    
    
    <ListPreference
       android:widgetLayout="@null"
		android:title="@string/setting_bg_title" 
		android:key="@string/setting_bg_key"
		android:entries="@array/bg_choise"
		android:entryValues="@array/bg_choise_value"
		android:defaultValue="0">
	</ListPreference>
	
	
	<SwitchPreference
		android:title="@string/setting_shake_title"
		android:defaultValue="false"
		android:summary="@string/setting_shake_summary"
		android:key="@string/setting_shake_key"
		android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
		>
	</SwitchPreference>
	
	<Preference  
	    android:widgetLayout="@null"
		android:title="@string/shake_degree_title"
		android:summary="@string/shake_degree_summary"
		android:key="@string/shake_degree_key"
		android:layout="@layout/custom_preference"
		>      
	</Preference>
	
	 <SwitchPreference
        android:title="@string/setting_show_spectrum"
        android:defaultValue="false"
        android:summary="@string/setting_show_spectrum_summary"         
        android:key="@string/setting_show_spectrum_key"
        android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
        >
    </SwitchPreference>
	
	<SwitchPreference  
        android:title="@string/setting_fade_title"
        android:defaultValue="false"
        android:summary="@string/setting_fade_summary"   
        android:key="@string/setting_fade_key"
        android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
        >
    </SwitchPreference >
	
	<SwitchPreference 
		android:title="@string/setting_backlight_title"
		android:defaultValue="false"
		android:summary="@string/setting_backlight_summary"
		android:key="@string/setting_backlight_key"
		android:widgetLayout="@lewa:layout/preference_widget_switch_noclickable"
		>
	</SwitchPreference >
	
</PreferenceCategory>
   
</PreferenceScreen>