<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:scrollbars="vertical"
        >
    
    <LinearLayout
        android:id="@+id/artistdetail_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/artistdetail_artistname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:paddingBottom="10dp"
            android:textSize="20sp" />
        <ImageView android:layout_width="match_parent"
            android:layout_height="0.15dp"
            android:scaleType="fitXY"
            android:src="@drawable/line"
            />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            >
        <TextView
            android:id="@+id/artistdetail_area"
            android:paddingTop="10dp"
            style="@style/IntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/artistdetail_floodtype"
            style="@style/IntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
             />

        <TextView
            android:id="@+id/artistdetail_height"
            style="@style/IntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
             />

        <TextView
            android:id="@+id/artistdetail_birthday"
            style="@style/IntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
             />

        <TextView
            android:id="@+id/artistdetail_star"
            style="@style/IntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
             />

        <TextView
            android:id="@+id/artistdetail_albumstotal"
            style="@style/IntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
             />
        </LinearLayout>
          <ImageView android:layout_width="match_parent"
            android:layout_height="0.15dp"
            android:scaleType="fitXY"
            android:src="@drawable/line"
            />
        <TextView 
            android:id="@+id/artistdetail_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            style="@style/IntroText"
            android:paddingTop="10dp"
            />
        </LinearLayout>
        </ScrollView>
        <TextView 
             android:id="@+id/artistdetail_notfound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/info_notfound"
             android:layout_gravity="center"
             style="@style/IntroText"
             android:visibility="gone"
             />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
              android:id="@+id/artistdetail_loading"
            android:gravity="center"
             android:layout_gravity="center"
             android:visibility="gone"
            >
        <ProgressBar 
            android:layout_width="20dip"
            android:layout_height="20dip"
            
            />
    
        <TextView 
             
               android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
                android:layout_gravity="center"
             android:text="@string/info_loading"
             style="@style/IntroText"
             />
        
        </LinearLayout>
          <TextView 
             android:id="@+id/artistdetail_neterror"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/info_neterror"
             android:layout_gravity="center"
             style="@style/IntroText"
             android:visibility="gone"
             />
           <TextView 
             android:id="@+id/artistdetail_notDownInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/notDownInfo"
             android:layout_gravity="center"
             style="@style/IntroText"
             android:visibility="gone"
             />

 </FrameLayout>
         
