<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="140dip"
    android:layout_margin="15dip">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/textView1"            
            android:layout_width="55dip"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/id3_track"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"    
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:singleLine="true" />
       </LinearLayout>     
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
         <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
	    <TextView
            android:id="@+id/textView2"            
            android:layout_width="55dip"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/id3_artist"/>

	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"  
	        android:textAppearance="?android:attr/textAppearanceMedium"               
	        android:singleLine="true" />
            </LinearLayout>  
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
                <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/textView3"            
            android:layout_width="55dip"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/id3_album"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"  
            android:textAppearance="?android:attr/textAppearanceMedium"               
            android:singleLine="true" />
          </LinearLayout>    
    </RelativeLayout>

</RelativeLayout>

</LinearLayout>
